--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="css/fontello.css">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="js/app.js"></script>
     </head>
 
     <body>
@@ -19,13 +21,14 @@
                         <a href="#servicios">SERVICIOS</a>
                         <a href="#portafolio">PORTAFOLIO</a>
                         <a href="#contacto">CONTACTO</a>
-                        <!-- <a href="#mapa">UBICACIÓN</a> -->
+                        <a href="#mapa">UBICACIÓN</a>
                     </nav>
                 </div>
             </header>
             
             <section id="home" class="container">
                 <h1>CREAMOS LAS <strong>APLICACIONES</strong> DEL FUTURO</h1>
+                <div class="divide"></div>
                 <p>Dev Studio es la mejor opción si necesitas un prototipo o quieres acelerar tu ciclo de desarrollo.</p>
                 <div class="social">
                     <a href=""><i class="icon-facebook-rect"></i></a>
